--- a/package.json
+++ b/package.json
@@ -20,14 +20,22 @@
     "@hello-pangea/dnd": "^16.5.0",
     "@svgr/webpack": "^6.5.1",
     "@vercel/analytics": "^0.1.11",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "duck-duck-scrape": "^2.2.4",
     "emoji-picker-react": "^4.5.15",
     "fuse.js": "^7.0.0",
+    "gpt-tokenizer": "^2.1.1",
+    "html-entities": "^2.4.0",
     "html-to-image": "^1.11.11",
+    "html-to-text": "^9.0.5",
+    "langchain": "^0.1.1",
     "mermaid": "^10.6.1",
     "moment": "^2.29.4",
     "nanoid": "^5.0.3",
     "next": "^13.4.9",
     "node-fetch": "^3.3.1",
+    "openai": "^4.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
@@ -44,6 +52,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@abraham/reflection": "^0.12.0",
     "@tauri-apps/cli": "^1.5.8",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.14",
