--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@abraham/reflection": "^0.12.0",
     "@tauri-apps/cli": "^1.5.8",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
