--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@hello-pangea/dnd": "^16.5.0",
     "@svgr/webpack": "^6.5.1",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "duck-duck-scrape": "^2.2.4",
-    "@vercel/speed-insights": "^1.0.2",
     "emoji-picker-react": "^4.5.15",
+    "encoding": "^0.1.13",
     "fuse.js": "^7.0.0",
     "gpt-tokenizer": "^2.1.1",
     "html-entities": "^2.4.0",
@@ -50,6 +51,7 @@
     "sharp": "^0.33.1",
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.4",
+    "web-streams-polyfill": "^3.3.2",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
